--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ocio/three-camera-utils",
-    "version": "1.1.0",
+    "version": "1.1.4",
     "main": "dist/three-camera-utils.cjs.js",
     "module": "dist/three-camera-utils.esm.js",
     "browser": "dist/three-camera-utils.umd.js",
@@ -17,5 +17,9 @@
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ocio/three-camera-utils.git"
     }
 }
