--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "@ocio/three-camera-utils",
-    "version": "1.6.0",
+    "version": "2.0.0",
     "main": "dist/three-camera-utils.cjs.js",
     "module": "dist/three-camera-utils.esm.js",
     "browser": "dist/three-camera-utils.umd.js",
-    "dependencies": {},
+    "dependencies": {
+        "three": "^0.115.0"
+    },
     "devDependencies": {
+        "ava": "^3.7.1",
         "babel-core": "^6.26.3",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-preset-env": "^1.7.0",
@@ -16,7 +19,8 @@
     },
     "scripts": {
         "build": "rollup -c",
-        "dev": "rollup -c -w"
+        "dev": "rollup -c -w",
+        "test": "ava"
     },
     "repository": {
         "type": "git",
